--- a/dang_ky.html
+++ b/dang_ky.html
@@ -13,5 +13,6 @@
         <input type="password" password="password">
         <button>Đăng ký</button>
     </form>
+    <p> Mô tả trnag đăng ký</p>
 </body>
 </html>
